<resources>
    <string name="app_name">Linkiar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"> Linkiar</string>
    <string name="nav_header_subtitle">Logística Inteligente</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_new_order">Nuevo pedido</string>
    <string name="menu_order_to_send">Pedidos a enviar</string>
    <string name="menu_orders_sent">Pedidos enviados</string>
    <string name="menu_list">Lista de precios</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">  Email</string>
    <string name="prompt_password">  Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="action_register">Registrar Usuario</string>
    <string name="action_register_short">Registrar</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">Usuario no registrado</string>
    <string name="invalid_password">La contraseña debe tener mas de 5 caracteres</string>
    <string name="login_failed">"Ingreso fallido"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>