<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_order"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_new_order" />

        <item
            android:id="@+id/nav_orders_sent"
            android:icon="@drawable/ic_check"
            android:title="@string/menu_orders_sent" />

        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_list" />
    </group>

    <group >
        <item
            android:id="@+id/subtitle"
            android:title=" ">
            <menu>
                <item
                    android:id="@+id/logOut"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </menu>
        </item>

    </group>
</menu>