<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_new_order">

    <fragment
        android:id="@+id/nav_new_order"
        android:name="com.martin.preventapp.ui.new_order.Company.CompanyFragment"
        android:label="@string/menu_new_order"
        tools:layout="@layout/fragment_company" />

    <fragment
        android:id="@+id/nav_orders_sent"
        android:name="com.martin.preventapp.ui.orders_sent.OrdersSentFragment"
        android:label="@string/menu_orders_sent"
        tools:layout="@layout/fragment_orders_sent" />

    <fragment
        android:id="@+id/nav_list"
        android:name="com.martin.preventapp.ui.list.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list" />
    <activity
        android:id="@+id/logOut"
        android:name="com.martin.preventapp.LogOut"
        android:label="activity_log_out"
        tools:layout="@layout/activity_log_out" />
</navigation>