<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Model.firebase.login.LoginActivity">

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="257dp"
        android:background="@drawable/shape"
        android:elevation="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/username"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/prompt_email"
            android:background="@drawable/shape"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:elevation="10dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/prompt_password"
            android:background="@drawable/shape"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:elevation="10dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/login"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/linkiar_signin"
            android:elevation="10dp"
            android:text="@string/action_sign_in"
            app:cornerRadius="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="268dp"
        android:backgroundTint="@color/linkiar_signin"
        android:elevation="10dp"
        android:text="@string/action_register"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>